# git-mcp

./: README.md  pyproject.toml
docs/: README.md
src/git_mcp/: cli.py  core.py  formatter.py
src/git_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
