[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-mcp"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
]

[project.scripts]
git-mcp = "git_mcp.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["git_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'